Prevent user selection and hide overflow

--- a/main.css
+++ b/main.css
@@ -1,6 +1,14 @@
+*
+{
+  user-select:none; /* Chrome and Opera */
+  -webkit-user-select:none; /* Safari */
+  -moz-user-select:none; /* Firefox */
+}
+
 body
 {
   background:gray;
+  overflow:hidden;
 }
 
 td
